<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/certificate_renamer"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/upload_your_text_file"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/uploadTextFileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_text_file"
                android:textColor="@color/white"
                android:backgroundTint="@color/button1"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_your_certificate_file"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="10dp" />

            <Button
                android:id="@+id/uploadCertificateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button1"
                android:textColor="@color/white"
                android:text="@string/upload_certificate" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/proceedToSelectionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed_to_select_text_area"
        android:textColor="@color/white"
        android:backgroundTint="@color/button2"
        android:layout_marginTop="20dp" />

</LinearLayout>